# learn_rust

./: README.md
100_Exercises_to_learn_rust/: README.md
100_Exercises_to_learn_rust/excercise_02_04_panics/: Cargo.toml
100_Exercises_to_learn_rust/excercise_02_04_panics/src/: lib.rs  main.rs
100_Exercises_to_learn_rust/excrcise_02_05_factorial/: Cargo.toml
100_Exercises_to_learn_rust/excrcise_02_05_factorial/src/: lib.rs  main.rs
100_Exercises_to_learn_rust/excrcise_02_06_while/: Cargo.toml
100_Exercises_to_learn_rust/excrcise_02_06_while/src/: lib.rs  main.rs
100_Exercises_to_learn_rust/excrcise_02_07_for/: Cargo.toml
100_Exercises_to_learn_rust/excrcise_02_07_for/src/: lib.rs  main.rs
100_Exercises_to_learn_rust/excrcise_02_08_overflow/: Cargo.toml
100_Exercises_to_learn_rust/excrcise_02_08_overflow/src/: lib.rs  main.rs
100_Exercises_to_learn_rust/excrcise_02_09_saturating/: Cargo.toml
100_Exercises_to_learn_rust/excrcise_02_09_saturating/src/: lib.rs  main.rs
100_Exercises_to_learn_rust/excrsise_02_10_casting/: Cargo.toml
100_Exercises_to_learn_rust/ticket_v1/: Cargo.toml
algorithm/: README.md
algorithm/06_グラフアルゴリズム/: README.md
algorithm/07_AIにおける経路探索/: README.md
algorithm/08_ネットワークフローアルゴリズム/: README.md
algorithm/09_計算幾何学/: README.md
atcoders/: 20240203.md  20240210.md  20240217.md  README.md
atcoders/002_過去問/: README.md
atcoders/381_AtCoderBiginnerContest/: README.md
projects/: README.md
projects/about_lifetime/: Cargo.toml
projects/about_mockall/: Cargo.toml  README.md
projects/about_string/: Cargo.toml
projects/about_thread/: Cargo.toml
projects/about_tracing/: Cargo.toml  README.md
projects/about_trait/: Cargo.toml  README.md
projects/async_await/: Cargo.toml
projects/cake_pattern/: Cargo.toml  README.md
projects/calculate/: Cargo.toml
projects/event_sourcing/: Cargo.toml  README.md
projects/event_sourcing/src/: main.rs
projects/file_read/: Cargo.toml
projects/image_process/: Cargo.toml  README.md
projects/learn_modules/: Cargo.toml  README.md
projects/learn_reqwest/: Cargo.toml  README.md
projects/learn_tauri/: README.md
projects/learn_tauri/leptos-axum/: Cargo.toml  README.md  Trunk.toml  styles.css
projects/learn_tauri/leptos-axum/src/: main.rs
projects/learn_tauri/leptos-axum/src-tauri/: Cargo.toml  tauri.conf.json
projects/learn_tauri/leptos-axum/src-tauri/src/: main.rs
projects/learn_tauri/leptos-axum/ui/: Cargo.toml  Trunk.toml
projects/learn_tauri/leptos-axum/ui/src/: error_template.rs  main.rs  todo.rs
projects/learn_tauri/leptos-tauri/: Cargo.toml  leptosfmt.toml  rust-analyzer.toml  styles.css
projects/learn_tauri/leptos-tauri/src/: app.rs  main.rs
projects/learn_tauri/leptos-tauri/src-tauri/: Cargo.toml  tauri.conf.json
projects/learn_tauri/leptos-tauri/src-tauri/src/: lib.rs  main.rs
projects/learn_tauri/leptos-tauri/tauri-app/: Cargo.toml  README.md  styles.css
projects/learn_tauri/leptos-tauri/tauri-app/src/: api.rs  app.rs  lib.rs  main.rs
projects/learn_tauri/leptos-tauri/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
projects/learn_tauri/leptos-tauri/tauri-app/src-tauri/src/: lib.rs
projects/learn_tauri/leptos/leptos-axum-app2/: Cargo.toml  README.md
projects/learn_tauri/leptos/leptos-axum-app2/src-tauri/: Cargo.toml  tauri.conf.json
projects/learn_tauri/leptos/leptos-axum-app2/src-tauri/src/: error_template.rs  errors.rs  lib.rs  main.rs  todo.rs
projects/learn_tauri/quiz-app/frontend/: Cargo.toml  index.html  styles.css
projects/learn_tauri/quiz-app/frontend/src/: lib.rs  main.rs
projects/lib-demo/: Cargo.toml
projects/life_game/: Cargo.toml  README.md
projects/multi_thread/: Cargo.toml  README.md
projects/project_template/: Cargo.toml  README.md
projects/project_template/domain/: Cargo.toml
projects/project_template/domain/src/: domain_handler.rs  domain_handler_impl.rs  domains.rs  domains_impl.rs  lib.rs  todo_api.rs
projects/project_template/domain/src/domains/: todo_api_client.rs
projects/project_template/domain/src/domains_impl/: todo_api_client_impl.rs
projects/project_template/domain/src/todo_api/: todo_api_client.rs  todo_api_repository.rs
projects/project_template/repository/: Cargo.toml
projects/project_template/repository/src/: lib.rs  repositories.rs  repositories_impls.rs  repository_handler.rs  repository_handler_impl.rs
projects/project_template/repository/src/repositories/: todo_repository.rs
projects/project_template/repository/src/repositories_impls/: todo_repository_impl.rs
projects/project_template/ui/: Cargo.toml
projects/project_template/ui/src/: lib.rs  main.rs
projects/project_template/usecase/: Cargo.toml
projects/project_template/usecase/src/: lib.rs  usecases.rs  usecases_impls.rs
projects/project_template/usecase/src/usecases/: add_todo_usecase.rs  delete_todo_usecase.rs  get_todo_list_usecase.rs  update_todo_usecase.rs
projects/project_template/usecase/src/usecases_impls/: add_todo_usecase_impl.rs  delete_todo_usecase_impl.rs  get_todo_list_usecase_impl.rs  update_todo_usecase_impl.rs
projects/rust-lesson/: Cargo.toml  README.md
projects/rust_1_8_0/: Cargo.toml
projects/rust_torch/: Cargo.toml  README.md
projects/rust_yaml/: Cargo.toml  README.md
projects/tauri-app/: Cargo.toml  README.md
projects/three_layer_di/: Cargo.toml  README.md
projects/todo_graphql_client/: Cargo.toml  README.md  query.graphql  schema.json
projects/wasm_app/mandelbrot/: Cargo.toml  LICENSE_MIT
projects/wasm_app/mandelbrot/src/: lib.rs  logic.rs
projects/web_app_todo/: .gitignore  Cargo.toml  README.md  todo.db
projects/web_app_todo/src/: main.rs
projects/web_app_todo/templates/: index.html
projects/web_app_todo_graphql/: Cargo.toml  README.md
projects/web_app_todo_graphql/src/: lib.rs  main.rs  models.rs  resolvers.rs
projects/web_app_todo_graphql/src/models/: character.rs  droid.rs  episode.rs  human.rs  query_root.rs  roots.rs  star_wars.rs  star_wars_char.rs  starwars.rs  starwars_char.rs  todo.rs  todo_broker.rs  todo_service_data.rs
(+462 files in other folders)
