[package]
name = "event_sourcing"
version = "0.1.0"
edition = "2021"

[dependencies]
cqrs-es = "0.4.12"
axum = "0.8.1"
async-trait = "0.1.88"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "json"] }
chrono = { version = "^0.4.41", default-features = false, features = ["clock"] }
tokio = { version = "1.45.1", features = ["full"] }

lambda_http = "0.14"
thiserror = "2.0.12"