[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
askama = "0.12.1"
thiserror = "1.0.66"
rusqlite = {version = "0.32.1", features=["bundled"]}
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
serde = {version = "1.0.214", features = ["derive"]}
time = "0.3.36"

