[package]
name = "web_app_todo_graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.13"
async-graphql-axum = "7.0.13"
async-stream = "0.3.5"
axum = "0.8.1"
futures-channel = "0.3.30"
futures-timer = "3.0.3"
futures-util = "0.3.30"
once_cell = "1.19"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = {version = "0.32.1", features=["bundled"]}
serde = {version = "1.0.214", features = ["derive"]}
slab = "0.4.9"
tokio = {version = "1.43.0", features = ["full"]}