[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[features]
mock = ["mockall"]


[dependencies]
mockall = {version = "0.9", optional = true}
util = {path = "../util"}
reqwest = "0.11.14"
serde_json = "1.0.132"
serde = {version = "1.0.214", features = ["derive"]}
log = {version = "0.4.22", features = ["std", "serde"]}