[package]
name = "ui"
version = "0.1.0"
edition = "2021"


[features]
mock = ["dep:mockall", "dep:mockall_double"]

[dependencies]
util = {path = "../util"}
usecase= {path = "../usecase"}
repository = {path = "../repository"}
domain = {path = "../domain"}
clap = {version = "4.5.23", features = ["derive"] }
log = {version = "0.4.22", features = ["std", "serde"]}
tokio = {version = "1.41.1", features = ["full"]}
mockall = {version = "0.13.1", optional = true}
mockall_double = {version = "0.3.1", optional = true}