[package]
name = "usecase"
version = "0.1.0"
edition = "2021"

[dependencies]
util = {path = "../util"}
repository = {path = "../repository"}

[dev-dependencies]
mockall = "0.13.1"
tokio = {version = "1.41.1", features = ["full"]}
repository = {path = "../repository", features = ["mock"]}
domain = {path = "../domain", features = ["mock"]}
fake = "3.0.1"