[package]
name = "usecase"
version = "0.1.0"
edition = "2021"

[features]
mock = ["mockall", "mockall_double"]

[dependencies]
util = {path = "../util"}
repository = {path = "../repository"}
mockall = {version = "0.13.1", optional = true}
mockall_double = {version = "0.3.1", optional = true}

[dev-dependencies]
tokio = {version = "1.41.1", features = ["full"]}
repository = {path = "../repository", features = ["mock"]}