[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["miyatama <n.miyata080825@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.40"
wee_alloc = {version = "0.4.5", optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version="0.3.4"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "Performance",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
