[package]
name = "tauri-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
web-sys = "0.3.77"
thiserror = "1.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
reqwasm = "0.5.0"

[workspace]
members = ["src-tauri"]
