[package]
name = "leptos-axum-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.8.1", optional = true }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
futures = "0.3.30"
http = "1.1"
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
leptos_axum = { version = "0.7.8", optional = true }
log = "0.4.22"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
simple_logger = "5.0"
sqlx = { version = "0.8.0", features = [ "runtime-tokio-rustls", "sqlite", ], optional = true }
thiserror = "1.0"
tokio = { version = "1.39", features = ["full"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["fs"], optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:tower",
  "dep:tower-http",
  "dep:tokio",
  "dep:sqlx",
  "leptos/ssr",
  "dep:leptos_axum",
]

[workspace]
members = ["src-tauri"]
